# ha-vfd-dashboard

./: Cargo.toml  README.md
.cargo/: config.toml
src/: config.rs  error.rs  main.rs
