[package]
name = "ha-vfd-dashboard"
version = "0.1.0"
authors = ["Orange_Murker"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = ["esp32c3", "async"] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }

esp-hal-embassy = { version = "0.2.0", features = ["esp32c3"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-81920", "integrated-timers"] }
embassy-time = { version = "0.3.1" }
embassy-time-driver = "0.1.0"

esp-wifi = { version = "0.7.1", features = [
    "esp32c3",
		"async",
    "phy-enable-usb",
		"wifi",
		"wifi-default",
		"embassy-net",
] }
embassy-net = {version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "dhcpv4-hostname", "dns", "medium-ethernet"] }
reqwless = { path = "../reqwless" , default-features = false, features = ["embedded-tls"] }
serde = { version = "1.0.205", default-features = false }
serde-json-core = "0.6.0"

# See https://github.com/embassy-rs/embassy/issues/1816
smoltcp = { version = "0.11.0", default-features = false, features = [ "dns-max-server-count-4" ] }

static_cell = "2.1.0"
heapless = { version = "0.8.0", default-features = false }

cu40026 = "0.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
