[package]
name = "ha-vfd-dashboard"
version = "0.1.0"
authors = ["Orange_Murker"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.1", features = ["esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }
esp-alloc = { version = "0.5.0" }

esp-hal-embassy = { version = "0.4.0", features = ["esp32c3"] }
embassy-executor = { version = "0.6.1", features = ["task-arena-size-81920", "integrated-timers"] }
embassy-time = { version = "0.3.2" }
embassy-time-driver = "0.1.0"

esp-wifi = { version = "0.10.1", features = [
    "esp32c3",
		"async",
    "phy-enable-usb",
		"wifi",
		"embassy-net",
] }
embassy-net = {version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "dhcpv4-hostname", "dns", "medium-ethernet"] }
reqwless = { git = "https://github.com/drogue-iot/reqwless.git", rev = "e6ebe0304261d175445030c671a3b172c576e400", default-features = false, features = ["embedded-tls"] }
serde = { version = "1.0.214", default-features = false }
serde-json-core = "0.6.0"

# See https://github.com/embassy-rs/embassy/issues/1816
smoltcp = { version = "0.11.0", default-features = false, features = [ "dns-max-server-count-4" ] }

static_cell = "2.1.0"
heapless = { version = "0.8.0", default-features = false }

cu40026 = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
